[gd_scene load_steps=5 format=2]

[ext_resource path="res://components/ui/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://components/ui/OptionsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://components/ui/ConfirmModal.tscn" type="PackedScene" id=4]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="BackgroundColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.313726 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ModalColorRect" type="ColorRect" parent="CenterContainer"]
margin_left = 400.0
margin_top = 180.0
margin_right = 880.0
margin_bottom = 540.0
rect_min_size = Vector2( 480, 360 )
color = Color( 0.301961, 0.301961, 0.301961, 1 )

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer2"]
margin_left = 458.0
margin_top = 250.0
margin_right = 821.0
margin_bottom = 470.0
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2/HBoxContainer"]
margin_right = 200.0
margin_bottom = 220.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 20

[node name="ContinueButton" type="Button" parent="CenterContainer2/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
mouse_default_cursor_shape = 2
text = "CONTINUE"

[node name="MainMenuButton" type="Button" parent="CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 200.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 60 )
mouse_default_cursor_shape = 2
text = "MAIN_MENU"

[node name="QuitButton" type="Button" parent="CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 200.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 60 )
mouse_default_cursor_shape = 2
text = "QUIT"

[node name="OptionsMenu" parent="CenterContainer2/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 220.0
margin_right = 363.0
margin_bottom = 220.0

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 624.0
margin_top = 198.0
margin_right = 674.0
margin_bottom = 228.0
text = "Pause"
align = 1

[node name="MainMenuConfirmModal" parent="." instance=ExtResource( 4 )]
visible = false
text = "YOU_SURE_LOOSE_PROGRESS"
yes_text = "MAIN_MENU_CONFIRM_YES"

[node name="QuitConfirmModal" parent="." instance=ExtResource( 4 )]
visible = false
text = "YOU_SURE_LOOSE_PROGRESS"
yes_text = "QUIT_CONFIRM_YES"
